se modifica el readme

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       html {
         font-size: 62.5%;
       }
+      input-lit {
+        --input-background: #ffff;
+        --input-border: blue;
+        --input-text: blue;
+        --input-placeholder: gray;
+      }
     </style>
   </head>
   <body>
